--- a/bytestringparser.cabal
+++ b/bytestringparser.cabal
@@ -8,16 +8,16 @@ stability:       experimental
 synopsis:        Combinator parsing with Data.ByteString.Lazy
 cabal-version:   >= 1.2
 
-flag bytestring-in-base
+flag split-base
 flag applicative-in-base
 
 library
-  if flag(bytestring-in-base)
+  if flag(split-base)
     -- bytestring was in base-2.0 and 2.1.1
     build-depends: base >= 2.0 && < 2.2
   else
     -- in base 1.0 and 3.0 bytestring is a separate package
-    build-depends: base < 2.0 || >= 3, bytestring >= 0.9
+    build-depends: base < 2.0 || >= 3, bytestring >= 0.9, containers >= 0.1.0.1
 
   if flag(applicative-in-base)
     build-depends: base >= 2.0
@@ -25,6 +25,7 @@ library
   else
     build-depends: base < 2.0
 
+  extensions:      CPP
   exposed-modules: Text.ParserCombinators.ByteStringParser
   hs-source-dirs:  src
   ghc-options:     -O2 -Wall -Werror
