--- a/bytestringparser.cabal
+++ b/bytestringparser.cabal
@@ -26,7 +26,7 @@ library
     build-depends: base < 2.0
 
   extensions:      CPP
-  exposed-modules: Text.ParserCombinators.ByteStringParser
-                   Text.ParserCombinators.ByteStringParser.FastSet
+  exposed-modules: Data.ParserCombinators.ByteStringParser
+                   Data.ParserCombinators.ByteStringParser.FastSet
   hs-source-dirs:  src
   ghc-options:     -O2 -Wall -Werror -funbox-strict-fields
