--- a/bytestringparser.cabal
+++ b/bytestringparser.cabal
@@ -28,5 +28,6 @@ library
   extensions:      CPP
   exposed-modules: Data.ParserCombinators.ByteStringParser
                    Data.ParserCombinators.ByteStringParser.FastSet
+                   Data.ParserCombinators.ByteStringParser.Internal
   hs-source-dirs:  src
   ghc-options:     -O2 -Wall -Werror -funbox-strict-fields
