--- a/attoparsec.cabal
+++ b/attoparsec.cabal
@@ -7,6 +7,7 @@ author:          Bryan O'Sullivan <bos@serpentine.com>
 stability:       experimental
 synopsis:        Combinator parsing with Data.ByteString.Lazy
 cabal-version:   >= 1.2
+build-type:      Simple
 
 flag split-base
 flag applicative-in-base
