--- a/attoparsec.cabal
+++ b/attoparsec.cabal
@@ -43,5 +43,5 @@ library
                    Data.Attoparsec.Incremental.Char8
                    Data.Attoparsec.FastSet
   other-modules:   Data.Attoparsec.Internal
-  ghc-options:     -O2 -Wall -funbox-strict-fields
-                   -fliberate-case-threshold=1000
+  ghc-options:     -Wall
+  ghc-prof-options: -auto-all
