Flesh out the C program to be more realistic.

--- a/examples/Makefile
+++ b/examples/Makefile
@@ -1,8 +1,15 @@
 CC := gcc
-CFLAGS := -O3
+CFLAGS := -O3 -Wall
+# To make the code about 6% faster:
+# CFLAGS += -fwhole-program --combine
 CPPFLAGS := -I$(HOME)/hg/http-parser
 
-c-rfc: rfc2616.o http_parser.o
-	$(CC) -o $@ $^
+all: c-http
+
+c-http: rfc2616.c http_parser.c
+	$(CC) $(CFLAGS) $(CPPFLAGS) -o $@ $^
+
+clean:
+	rm -f *.hi *.o c-http
 
 vpath %.c $(HOME)/hg/http-parser
