Fix up an errant test.

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -1,8 +1,11 @@
-all: TestFastSet.out QC.out
+all: TestFastSet.out qc.out
 
 %.out: %.exe
 	./$< | tee $<.tmp
 	mv $<.tmp $@
+
+qc.exe: QC.hs
+	ghc -O -fno-warn-orphans --make -o $@ $<
 
 %.exe: %.hs
 	ghc -O -fno-warn-orphans --make -o $@ $<
