Add a .Lazy module once again.

--- a/attoparsec.cabal
+++ b/attoparsec.cabal
@@ -37,6 +37,7 @@ library
                    Data.Attoparsec.Char8
                    Data.Attoparsec.Combinator
                    Data.Attoparsec.FastSet
+                   Data.Attoparsec.Lazy
   other-modules:   Data.Attoparsec.Internal
   ghc-options:     -Wall
   ghc-prof-options: -auto-all
