Add a tiny, focused "Zepto" module that is faster for some tasks
Although up to 10x slower for general parsing, this module improves
the performance of the aeson module's string unescaper by between
10% and 50%.

--- a/attoparsec.cabal
+++ b/attoparsec.cabal
@@ -58,6 +58,7 @@ library
                    Data.Attoparsec.Combinator
                    Data.Attoparsec.FastSet
                    Data.Attoparsec.Lazy
+                   Data.Attoparsec.Zepto
   other-modules:   Data.Attoparsec.Internal
   ghc-options:     -Wall
 
