--- a/attoparsec.cabal
+++ b/attoparsec.cabal
@@ -60,6 +60,7 @@ library
                    Data.Attoparsec.Lazy
                    Data.Attoparsec.Zepto
   other-modules:   Data.Attoparsec.Internal
+                   Data.Attoparsec.Number
   ghc-options:     -Wall
 
   if flag(developer)
