--- a/attoparsec.cabal
+++ b/attoparsec.cabal
@@ -63,6 +63,7 @@ library
                    Data.Attoparsec.Number
                    Data.Attoparsec.Zepto
   other-modules:   Data.Attoparsec.Internal
+                   Data.Attoparsec.Internal.Types
   ghc-options:     -Wall
 
   if flag(developer)
