Add support for the text package
--HG--
rename : Data/Attoparsec.hs => Data/Attoparsec/ByteString.hs
rename : Data/Attoparsec/Char8.hs => Data/Attoparsec/ByteString/Char8.hs
rename : Data/Attoparsec/FastSet.hs => Data/Attoparsec/ByteString/FastSet.hs
rename : Data/Attoparsec/Internal.hs => Data/Attoparsec/ByteString/Internal.hs
rename : Data/Attoparsec/Lazy.hs => Data/Attoparsec/ByteString/Lazy.hs
rename : Data/Attoparsec.hs => Data/Attoparsec/Text.hs
rename : Data/Attoparsec/Internal.hs => Data/Attoparsec/Text/Internal.hs
rename : Data/Attoparsec/Lazy.hs => Data/Attoparsec/Text/Lazy.hs

--- a/.hgignore
+++ b/.hgignore
@@ -1,20 +1,10 @@
-^dist$
+^(?:cabal-dev|dist)$
+\.(?:aux|eventlog|h[ip]|log|[oa]|orig|prof|ps|rej|swp)$
+~$
 benchmarks/Arse
 benchmarks/med.txt
 benchmarks/tiny
 
 syntax: glob
-*.aux
-*.hi
-*.hp
-*.o
-*.orig
-*.out
-*.pdf
-*.prof
-*.ps
-*.rej
-*~
-.*.swp
 .\#*
 \#*
