Refactor test suit into bytestring and text portions.
--HG--
rename : tests/QC.hs => tests/QC/ByteString.hs
rename : tests/QC.hs => tests/QC/Text.hs

--- a/attoparsec.cabal
+++ b/attoparsec.cabal
@@ -69,6 +69,8 @@ test-suite tests
   type:           exitcode-stdio-1.0
   hs-source-dirs: tests
   main-is:        QC.hs
+  other-modules:  QC.ByteString
+                  QC.Text
 
   ghc-options:
     -Wall -threaded -rtsopts
