Add support for hpc coverage checking, sorta

--- a/.hgignore
+++ b/.hgignore
@@ -1,9 +1,10 @@
 ^(?:cabal-dev|dist)$
-\.(?:aux|eventlog|h[ip]|log|mix|[oa]|orig|prof|ps|rej|swp)$
+\.(?:aux|eventlog|h[ip]|hs.html|log|[mt]ix|[oa]|orig|prof|ps|rej|swp)$
 ~$
 benchmarks/Arse
 benchmarks/med.txt
 benchmarks/tiny
+hpc.*\.html$
 
 syntax: glob
 .\#*
