--- a/attoparsec.cabal
+++ b/attoparsec.cabal
@@ -34,6 +34,10 @@ Flag developer
   Description: Whether to build the library in development mode
   Default: False
 
+Flag hpc
+  Description: Whether to build the library with coverage support
+  Default: False
+
 library
   build-depends: array,
                  base >= 3 && < 5,
@@ -62,6 +66,9 @@ library
                    Data.Attoparsec.Text.Internal
   ghc-options:     -Wall
 
+  if flag(hpc)
+    ghc-options: -fhpc
+
   if flag(developer)
     ghc-prof-options: -auto-all
 
@@ -73,7 +80,7 @@ test-suite tests
                   QC.Text
 
   ghc-options:
-    -Wall -threaded -rtsopts
+    -fhpc -Wall -threaded -rtsopts
 
   build-depends:
     attoparsec,
