--- a/attoparsec.cabal
+++ b/attoparsec.cabal
@@ -23,14 +23,15 @@ extra-source-files:
     benchmarks/Tiny.hs
     benchmarks/attoparsec-benchmarks.cabal
     benchmarks/med.txt.bz2
-    tests/Makefile
-    tests/QC.hs
-    tests/TestFastSet.hs
     examples/Makefile
     examples/Parsec_RFC2616.hs
     examples/RFC2616.hs
     examples/TestRFC2616.hs
     examples/rfc2616.c
+    tests/Makefile
+    tests/QC.hs
+    tests/QC/*.hs
+    tests/TestFastSet.hs
 
 Flag developer
   Description: Whether to build the library in development mode
