Ignore cabal sandbox files

--- a/.hgignore
+++ b/.hgignore
@@ -1,10 +1,11 @@
-^(?:cabal-dev|dist)$
+^(?:\.cabal-sandbox|cabal-dev|dist)$
 \.(?:aux|eventlog|h[ip]|hs.html|log|[mt]ix|[oa]|orig|prof|ps|rej|swp)$
 ~$
 benchmarks/Arse
 benchmarks/dist
 benchmarks/med.txt
 benchmarks/tiny
+cabal.sandbox.config
 hpc.*\.html$
 
 syntax: glob
