--- a/attoparsec.cabal
+++ b/attoparsec.cabal
@@ -43,7 +43,8 @@ library
                  bytestring,
                  containers,
                  deepseq,
-                 text >= 0.11.1.5
+                 text >= 0.11.1.5,
+                 scientific >= 0.0 && < 0.1
 
   exposed-modules: Data.Attoparsec
                    Data.Attoparsec.ByteString
