--- a/attoparsec.cabal
+++ b/attoparsec.cabal
@@ -44,7 +44,7 @@ library
                  containers,
                  deepseq,
                  text >= 0.11.1.5,
-                 scientific >= 0.0 && < 0.1
+                 scientific
 
   exposed-modules: Data.Attoparsec
                    Data.Attoparsec.ByteString
