--- a/attoparsec.cabal
+++ b/attoparsec.cabal
@@ -36,6 +36,7 @@ extra-source-files:
 Flag developer
   Description: Whether to build the library in development mode
   Default: False
+  Manual: True
 
 library
   build-depends: array,
