Move number parsing benchmarks into their own module
--HG--
rename : benchmarks/Benchmarks.hs => benchmarks/Numbers.hs
extra : rebase_source : 2f7bcff2cfe5158a8253a2400b00e1643df05255
extra : amend_source : 0354a0454d17f9128c34b882b28dac61e48afce1

--- a/attoparsec.cabal
+++ b/attoparsec.cabal
@@ -90,7 +90,10 @@ test-suite tests
 benchmark benchmarks
   type: exitcode-stdio-1.0
   hs-source-dirs: benchmarks
+  ghc-options: -O2 -Wall
   main-is: Benchmarks.hs
+  other-modules:
+    Numbers
   build-depends:
     attoparsec,
     base,
