Move number parsing benchmarks into their own module
--HG--
rename : benchmarks/Benchmarks.hs => benchmarks/Numbers.hs

--- a/attoparsec.cabal
+++ b/attoparsec.cabal
@@ -97,6 +97,8 @@ benchmark benchmarks
   type: exitcode-stdio-1.0
   hs-source-dirs: benchmarks, .
   main-is: Benchmarks.hs
+  other-modules:
+    Numbers
 
   ghc-options: -O2 -Wall
 
