Add a Text version of the headers benchmarks
--HG--
rename : benchmarks/Headers.hs => benchmarks/HeadersByteString.hs
rename : benchmarks/Headers.hs => benchmarks/HeadersText.hs

--- a/attoparsec.cabal
+++ b/attoparsec.cabal
@@ -94,7 +94,8 @@ benchmark benchmarks
   ghc-options: -O2 -Wall
   main-is: Benchmarks.hs
   other-modules:
-    Headers
+    HeadersByteString
+    HeadersText
     Numbers
   build-depends:
     attoparsec,
