--- a/attoparsec.cabal
+++ b/attoparsec.cabal
@@ -100,6 +100,7 @@ benchmark benchmarks
   ghc-options: -O2 -Wall
   main-is: Benchmarks.hs
   other-modules:
+    Common
     HeadersByteString
     HeadersText
     Numbers
