--- a/benchmarks/attoparsec-benchmarks.cabal
+++ b/benchmarks/attoparsec-benchmarks.cabal
@@ -9,6 +9,7 @@ build-type: Simple
 executable attoparsec-benchmarks
   main-is: Benchmarks.hs
   other-modules:
+    Common
     HeadersByteString
     HeadersText
     Numbers
