Add HTTP 1.1 Link benchmark

--- a/attoparsec.cabal
+++ b/attoparsec.cabal
@@ -96,6 +96,7 @@ benchmark benchmarks
   other-modules:
     HeadersByteString
     HeadersText
+    Links
     Numbers
   build-depends:
     attoparsec,
