--- a/benchmarks/attoparsec-benchmarks.cabal
+++ b/benchmarks/attoparsec-benchmarks.cabal
@@ -11,6 +11,7 @@ executable attoparsec-benchmarks
   other-modules:
     HeadersByteString
     HeadersText
+    Links
     Numbers
   hs-source-dirs: .. .
   ghc-options: -O2 -Wall
