--- a/attoparsec.cabal
+++ b/attoparsec.cabal
@@ -1,5 +1,5 @@
 name:            attoparsec
-version:         0.11.3.0
+version:         0.11.3.1
 license:         BSD3
 license-file:    LICENSE
 category:        Text, Parsing
@@ -44,7 +44,7 @@ library
                  containers,
                  deepseq,
                  text >= 0.11.3.1,
-                 scientific >= 0.2
+                 scientific >= 0.2 && < 0.3
 
   exposed-modules: Data.Attoparsec
                    Data.Attoparsec.ByteString
