--- a/attoparsec.cabal
+++ b/attoparsec.cabal
@@ -45,6 +45,10 @@ library
                  deepseq,
                  text >= 0.11.3.1,
                  scientific >= 0.3.1 && < 0.4
+  if impl(ghc < 7.4)
+    build-depends:
+      bytestring < 0.10.4.0,
+      text < 1.1
 
   exposed-modules: Data.Attoparsec
                    Data.Attoparsec.ByteString
