--- a/attoparsec.cabal
+++ b/attoparsec.cabal
@@ -43,8 +43,8 @@ library
                  bytestring,
                  containers,
                  deepseq,
-                 text >= 0.11.3.1,
-                 scientific >= 0.3.1 && < 0.4
+                 scientific >= 0.3.1 && < 0.4,
+                 text >= 0.11.3.1
   if impl(ghc < 7.4)
     build-depends:
       bytestring < 0.10.4.0,
