Fix lower bound on scientific

--- a/benchmarks/attoparsec-benchmarks.cabal
+++ b/benchmarks/attoparsec-benchmarks.cabal
@@ -25,7 +25,7 @@ executable attoparsec-benchmarks
     directory,
     filepath,
     parsec >= 3.1.2,
-    scientific,
+    scientific >= 0.3.1,
     text >= 1.1.1.0,
     unordered-containers,
     vector
