--- a/attoparsec.cabal
+++ b/attoparsec.cabal
@@ -62,7 +62,8 @@ library
                    Data.Attoparsec.Text.Lazy
                    Data.Attoparsec.Types
                    Data.Attoparsec.Zepto
-  other-modules:   Data.Attoparsec.ByteString.FastSet
+  other-modules:   Data.Attoparsec.ByteString.Buffer
+                   Data.Attoparsec.ByteString.FastSet
                    Data.Attoparsec.ByteString.Fhthagn
                    Data.Attoparsec.ByteString.Internal
                    Data.Attoparsec.Internal
