--- a/attoparsec.cabal
+++ b/attoparsec.cabal
@@ -44,11 +44,10 @@ library
                  containers,
                  deepseq,
                  scientific >= 0.3.1 && < 0.4,
-                 text >= 0.11.3.1
+                 text >= 1.1.1.3
   if impl(ghc < 7.4)
     build-depends:
-      bytestring < 0.10.4.0,
-      text < 1.1
+      bytestring < 0.10.4.0
 
   exposed-modules: Data.Attoparsec
                    Data.Attoparsec.ByteString
@@ -68,6 +67,7 @@ library
                    Data.Attoparsec.ByteString.Internal
                    Data.Attoparsec.Internal
                    Data.Attoparsec.Internal.Types
+                   Data.Attoparsec.Text.Buffer
                    Data.Attoparsec.Text.FastSet
                    Data.Attoparsec.Text.Internal
   ghc-options: -O2 -Wall
